[package]
name = "amraam"
version = "0.1.0"
authors = ["Chronophylos <nikolai@chronophylos.com>"]
edition = "2018"

[dependencies]
anyhow    = "1.0"
thiserror = "1.0"
termion   = "1.5"
config    = "0.10"
lazy_static = "1.4"
tinytemplate = "1.1.0"
serde = "1.0.111"
serde_derive = "1.0.111"
chrono = "0.4"
serde_json = "1.0.55"
serde_repr = "0.1"
roxmltree = "0.11.0"
clap = "2.33.1"
num_cpus = "1.0"
log = "0.4.8"
shellexpand = "2.0.0"
dialoguer = "0.6.2"
pwd = "1.3.0"
sudo = "0.3.1"
toml = "0.5"
os_info = "2.0.6"
indicatif = "0.15.0"
console = "0.11.3"